# ephys2

./: CI.md  LICENSE  README.md  benchmarks.md  createWorkflowFromTemplate.py  runGui.sh  runSingularity.slurm  runpipeline.sh
ephys2/: .editorconfig  .gitignore  .pylintrc  CMakeLists.txt  GUI.md  README.md  README_old.md  benchmark-requirements.txt  data.md  gui-requirements.txt  pytest.ini  setup-requirements.txt  setup.py  synthetic.md  tox.ini  workflow.yaml
ephys2/cpp/: .gitignore  CMakeLists.txt  README.md
ephys2/cpp/include/: ephys2.h
ephys2/cpp/include/ephys2/: align.h  detect.h  intan_ofps.h  isosplit5.h  link.h  mask.h  rhd2000.h  rhd64.h  snippet.h  sosfilt.h  spc.h  split.h  utils.h
ephys2/cpp/include/isosplit5/: isocut5.h  jisotonic5.h
ephys2/cpp/include/spc/: SW.h  utilities.h
ephys2/cpp/src/: align.cpp  arr_utils.cpp  detect.cpp  intan_ofps.cpp  isosplit5.cpp  link.cpp  mask.cpp  pybind.cpp  rhd2000.cpp  rhd64.cpp  snippet.cpp  sosfilt.cpp  spc.cpp  split.cpp
ephys2/cpp/src/isosplit5/: isocut5.cpp  jisotonic5.cpp
ephys2/cpp/src/spc/: RaggedArray.c  aux1.c  aux2.c  distance.c  edge.c  utilities.c
ephys2/cpp/tests/: CMakeLists.txt  test_rhd.cpp
ephys2/installer/: README.md  installer.sh  uninstaller_old.sh
ephys2/installer/aux/: envvars.sh  oldinstall_check.sh
ephys2/installer/conda/: activate_ephys2_full.sh  activate_ephys2_gui.sh  deactivate_ephys2.sh
ephys2/numeric_tests/: README.md  requirements.txt  utils.py
ephys2/numeric_tests/clustering/: base.py  blobs.py  blobs2.py  circles.py  moons.py  waveforms1.py
ephys2/numeric_tests/tracking/: base.py  blobs.py  blobs2.py
ephys2/perf_tests/: filtfilt.py  isosplit.py  spc.py
ephys2/scratch/: csr_ds.py  filter.cpp  filter.py  mpi.py  plot_amp.py  plot_snippet.py  plot_utils.py  sdetect.cpp
ephys2/src/ephys2/: copy_channel_groups.py  run.py  validate.py
ephys2/src/ephys2/benchmark_server/: __main__.py  extrinsic.py  intrinsic.py
ephys2/src/ephys2/data/: hc1_filelist.txt  pca_xgb_classifier.p
ephys2/src/ephys2/docs/: __init__.py  isosplit_segfuse.rst
ephys2/src/ephys2/gui/: __main__.py  colors.py  home.py  run.py  utils.py
ephys2/src/ephys2/lib/: README.md  array.py  cluster.py  distribution.py  graph.py  interface.py  isosplit.py  loader.py  metrics.py  mpi.py  profile.py  seq_align.py  settings.py  sparse.py  spc.py  test_interface.py  transforms.py  utils.py
ephys2/src/ephys2/pipeline/: README.md  checkpoint.py  eval.py  finalize.py  label.py  load.py  stages.py
ephys2/tests/: utils.py
ephys2/tests/data/: 637147781467463722_10k.rhd  637196011466866173_part.rhd  README.md  r4_210612_195804_part.rhd  templates_30_tetrode_18-02-2022_11-10.h5  templates_50_tetrode_18-02-2022_19-52.h5  tetrode50.yaml
ephys2/tests/data/sample_ofps/: info.rhd
ephys2/tests/intanutil/: read_header.py  read_multi_data_blocks.py
ephys2/tests/unit_tests/: README.md
ephys2/tests/workflow_tests/: README.md  test_eval.py  test_idempotence.py  test_ofps_aux.py  test_old_new_linking_equivalence.py  test_outputs.py  test_rhd64_aux.py  test_storage.py
ephys2/tests/workflows/: README.md  copy_dh.yaml  copy_ofps.yaml  copy_rhd.yaml  copy_rhd64.yaml  isosplit_idempotence.yaml  isosplit_label_summarize.yaml  isosplit_label_summarize_new.yaml  isosplit_label_summarize_old.yaml  ofps_aux.yaml  rhd64_aux.yaml  rhd_aux.yaml  snippet.yaml  store_snippets.yaml
(+331 files in other folders)
